# auxilium-leonis

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
dangerous-outdated/basics-of-symfony/: index.html
dangerous-outdated/django-deployment-on-render/: index.html
devops/deployment/: how_to_deploy_a_django_app_on_render.md
docs/: index.md
docs/dangerous-outdated/: basics-of-symfony.md  django-deployment-on-render.md
docs/frameworks/symfony/: basics-of-symfony.md  phpunit-in-symfony.md
docs/frameworks/vue-nuxt/: basics-of-nuxt.md  basics-of-vue.md  state-management.md  testing-nuxt.md
docs/machine-learning-kurz-und-gut/: 2_1-linear-regression.md  overview.md
frameworks/symfony/: basics-of-symfony.md
frameworks/symfony/basics-of-symfony/: index.html
frameworks/symfony/phpunit-in-symfony/: index.html
frameworks/vue-nuxt/basics-of-nuxt/: index.html
frameworks/vue-nuxt/basics-of-vue/: index.html
frameworks/vue-nuxt/state-management/: index.html
frameworks/vue-nuxt/testing-nuxt/: index.html
frameworks/vuejs/: basics-of-vue.md
machine-learning-kurz-und-gut/2_1-linear-regression/: index.html
machine-learning-kurz-und-gut/overview/: index.html
projects/state-management/: bun.lockb  nuxt.config.ts  package.json
projects/state-management/components/: TaskDetails.vue  TaskForm.vue
projects/state-management/pages/: index.vue
projects/state-management/stores/: TaskStore.ts
search/: search_index.json
