[tool.poetry]
name = "cheatsheets"
version = "0.1.0"
description = ""
authors = ["Leo Gall <gall.dev@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
